<resources>
    <string name="app_name">Rhythm to Notes</string>

    <string name="calibrationDescription_en">Due to audio playback latency, calibration must be done before proceeding. After the initial calibration, you will be able to repeat it later.\n\nFour metronome clicks will be played. Touch the screen at the next (fifth) click.</string>
    <string name="calibrationDescription_hr">Zbog kašnjenja reprodukcije zvuka prije početka je potrebno provesti kalibraciju. Nakon početne kalibracije, moći ćete je po potrebi naknadno provesti.\n\nBit će odsvirana četiri udarca metronoma. Dotaknite ekran u trenutku sljedećeg (petog) udarca.</string>

    <string name="write_description">Play the rhythm by touching the red surface. Notation will be shown after the metronome has stopped.</string>



    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="title_activity_calibration">CalibrationActivity</string>

    <string name="calibration">calibration</string>
    <string name="calibrationDescription">Default</string>
    <string name="title_activity_first_start">FirstStartActivity</string>
    <string name="title_activity_choose_language">ChooseLanguageActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="continue_">Continue</string>

    <string name="repeat">Repeat</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="select_mode">Select mode</string>
    <string name="change_language">Change Language</string>
    <string name="credits">Credits</string>
    <string name="mode_selection">MODE SELECTION</string>
    <string name="dotted">Dotted</string>
    <string name="triplets">Triplets</string>
    <string name="dotted_plus_triplets">Dotted + Triplets</string>
    <string name="next">Next</string>
    <string name="choose_mode">Choose mode</string>
    <string name="metronome_time_signature_settings">METRONOME AND TIME SIGNATURE SETTINGS</string>
    <string name="go">GO</string>
    <string name="app_made_by">App made by</string>
    <string name="programmers">Programmers</string>
    <string name="music_notation_font">Music notation font</string>
    <string name="latency">latency</string>
    <string name="creditsUPPERCASE">CREDITS</string>
    <string name="change_languageUPPERCASE">CHANGE LANGUAGE</string>
    <string name="calibrationUPPERCASE">CALIBRATION</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="pressAgain">Press again to exit.</string>

    <string name="Write_banner_ad_unit_id">ca-app-pub-4395115168912085/6525385451</string>
    <string name="MainMenu_banner_ad_unit_id">ca-app-pub-4395115168912085/4424700251</string>
    <string name="ModeSelect_banner_ad_unit_id">ca-app-pub-4395115168912085/5048652259</string>
    <string name="Credits_banner_ad_unit_id">ca-app-pub-4395115168912085/9618452655</string>
    <string name="FirstStart_banner_ad_unit_id">ca-app-pub-4395115168912085/3571919053</string>
    <string name="Metronome_banner_ad_unit_id">ca-app-pub-4395115168912085/6258883458</string>

    <string name="splash_images">Splash screen images:</string>
    <string name="icon_images">App icon images:</string>
    <string name="dotted_description">For notating durations in between of basic notes\' durations, dotted notes are used. This mode is sufficient for notating most simpler rhythms.</string>
    <string name="dotted_plus_triplets_description">This mode is used for notating complex rhythms which contain both dotted notes and triplets. Note that it could take more time for notation than in other two modes.</string>
    <string name="triplets_description">Instead of dotted notes, triplets are used. This mode is used for notating jazz, "swing" rhythms.</string>
    <string name="img_credits">Splash screen and app icon images</string>

</resources>
