<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luka.sequencer.ModeSelectionActivity"
    android:id="@+id/linearLayoutMenu"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mode_selection"
        android:id="@+id/textView2"
        android:layout_weight="0.1"
        android:textStyle="bold"
        android:textSize="22dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:weightSum="3">

            <!--<Button-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight="0.333"-->
                <!--android:text="Dotted"-->
                <!--android:id="@+id/buttonModeDotted"-->
                <!--android:enabled="true" />-->

            <Button
                android:text="@string/dotted"
                android:id="@+id/buttonModeDotted"
                android:enabled="true"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/menubutton1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginBottom="2dp"
                android:textSize="22dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/triplets"
                android:id="@+id/buttonModeTriplets"
                android:enabled="true"
                android:background="@drawable/menubutton1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textSize="22dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dotted_plus_triplets"
                android:id="@+id/buttonModeDottedPTriplets"
                android:enabled="true"
                android:background="@drawable/menubutton1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginTop="2dp"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.60"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/choose_mode"
                android:id="@+id/textViewChooseMode"
                android:layout_weight="0"
                android:gravity="center"
                android:textSize="14dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/imageView"
                android:layout_weight="0.333" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="New Text"
                android:id="@+id/textViewModeDescription"
                android:layout_weight="0.467"
                android:gravity="center"
                android:textSize="14dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/next"
                android:background="@drawable/menubutton1"
                android:id="@+id/buttonStartMode"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_marginLeft="2dp"
                android:textSize="22dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
