<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.luka.sequencer.CalibrationActivity"
    android:weightSum="1"
    android:baselineAligned="false"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/calibrationUPPERCASE"
        android:id="@+id/textView11"
        android:layout_weight="0.1"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/relativeLayoutCountdown"
        android:layout_weight="0.9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textViewCountdown"
            android:digits="1"
            android:textSize="100dp"
            android:text="4"
            android:layout_below="@+id/buttonContinue"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_"
            android:id="@+id/buttonContinue"
            android:background="@drawable/menubutton1"
            android:layout_alignParentBottom="true"
            android:enabled="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            android:layout_marginTop="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:id="@+id/buttonRepeat"
            android:background="@drawable/menubutton1"
            android:layout_above="@+id/buttonContinue"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
