<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.luka.rhythmtonotes.CreditsActivity"
    android:orientation="vertical"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/creditsUPPERCASE"
        android:id="@+id/textView13"
        android:textStyle="bold"
        android:layout_weight="0.075"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="0.925" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_made_by"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="SFI"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="sfidevelopers@gmail.com"
                android:id="@+id/textView14"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView5"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/programmers"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView14"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Luka Jančin"
                android:id="@+id/textView7"
                android:layout_below="@+id/textView6"
                android:layout_toLeftOf="@+id/textView4"
                android:layout_toStartOf="@+id/textView4"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Jasmin Vučelj"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:layout_toEndOf="@+id/textView6"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/music_notation_font"
                android:id="@+id/textView9"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="&quot;Rhythms&quot;, downloaded from http://hindson.com.au"
                android:id="@+id/textView10"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/img_credits"
                android:id="@+id/textView"
                android:textSize="18sp"
                android:layout_below="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="- Yannick (http://www.flaticon.com/authors/yannick) and Freepik (http://www.flaticon.com/authors/freepik) from www.flaticon.com"
                android:id="@+id/textView15"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="- Freepik.com"
                android:id="@+id/textView17"
                android:textSize="18sp"
                android:layout_below="@+id/textView15"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutAdCredits"
        xmlns:ads="http://schemas.android.com/apk/res-auto">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/Credits_banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</LinearLayout>
